--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,5 @@
 {
-    "display_name": "AnnounceMesssageTest
-",
+    "display_name": "AnnounceMesssageTest",
     "loading_order": 9,
     "requires": [],
     "optional": [],
